--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
     - "2.7"
 install: "python setup.py develop"
-script: "python setup.py tests"
+script: "python setup.py test"
