--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ services:
 language: python
 python:
     - "2.7"
-install: "python setup.py develop"
+install:
+    - "pip install -U setuptools"
+    - "python setup.py develop"
 
 before_script:
     - createdb -O postgres -E UTF-8 thousands
